wp-content/themes/paceaux3/style.css
/* ... */
 
 thead th,
 tfoot th {
   font-size: 1.5em;
   font-size: var(--baseTitleSize);
   /* treat th in header/footer as h3 */
 }
 
 thead tr:last-child th,
 thead tr:last-child td {
   border-bottom-width: 2px;
 }
 
 tfoot tr:first-child th,
 thead tr:last-child td {
   border-top-width: 2px;
 }
 
 [contenteditable="true"] {
   display: block;
 }
 
 [contenteditable="true"]:hover {
   outline: 1px dotted var(--themeActiveTrimColor);
 }
 
 [contenteditable="true"]:focus,
 [contenteditable="true"]:active {
   outline: 1px solid var(--themeActiveTrimColor);
 }
 
 table,
 table * {
   box-sizing: border-box;
 }

/*==========
#Form #Variables
==========*/
form {
    /*=====
        #Text #Size
    =====*/
	--formBiggestTextSize: var(--biggerTextSize, 1.2em);
	--formBaseTextSize: var(--baseTextSize, 1em);
	--formSmallestTextSize: var(--smallTextSize, .8em);

    /*=====
        #Title #Size
    =====*/
    --formBiggestTitleSize: var(--baseTitleSize, 1.5em);
    --formBaseTitleSize: var(--formBiggestTextSize);
    --formSmallestTitleSize: var(--formBaseTextSize);

	--formControlSize: var(--formBaseTextSize);
    --formLabelSize: var(--formBaseTextSize);
    --formTitleSize: var(--formBaseTitleSize);

    /*===== 
        #LineHeight 
    =====*/
    --formBaseLineHeight: var(--smallLineHeight, 1.2);
    --formSmallLineHeight: 1;

	/*=====
        #Font #FontFamilies #Typeface
    =====*/
    --formBaseFontFamily: var(--baseFontFamily,  'Georgia','Times New Roman', 'serif');
    --formTitleFontFamily: var(--titleFontFamily, 'Helvetica', 'Arial', 'sans-serif');

    /*=====
        #Border
    =====*/
    --controlBorderStyle: solid;
    --controlBorderWidth: 1px;
    --controlCornerSize: 0.25rem;

    --controlGroupBorderColor: var(--colorNeutral, rgb(165,165,165));
    --controlGroupBorderStyle: var(--controlBorderStyle);
    --controlGroupBorderWidth: var(--controlBorderWidth);
    --controlGroupCornerSize: calc(var(--controlCornerSize) / 2);
    --controlGroupBorder: var(--controlGroupBorderWidth) var(--controlGroupBorderStyle) var(--controlGroupBorderColor);
    

    /*=====
        #Spacing
    =====*/
    --controlVertPadding: .375em;
    --controlHorzPadding: .75rem;
    --controlPadding: var(--controlVertPadding) var(--controlHorzPadding);
    --controlGroupPadding: .618em .618rem;

    
    /*=====
        #Colors
    =====*/
    --controlColor:  var(--colorNeutralDark, rgb(165,165,165));
    --controlGroupColor: var(--colorNeutralDark, rgb(110,110,110));
    --controlBackgroundColor: rgb(255, 255, 255);
    --controlGroupBackgroundColor: transparent;
    --controlBorderColor: var(--controlColor);

    /*=====
        #Colors #Hover #Focus
    =====*/
    --controlColorInterest: var(--colorNeutralDarker);
    --controlBackgroundColorInterest: var(--controlBackgroundColor);
    --controlBorderColorInterest: var(--controlColorInterest);
    
    /*=====
        #Colors #Active
    =====*/
    --controlColorActive: var(--colorNeutralDarker);
    --controlBackgroundColorActive: var(--controlBackgroundColor);
    --controlBorderColorActive: var(--controlBorderColorActive);
      
    /*=====
        #Colors #Deactivated
    =====*/
    --controlColorDeactivated: var(--controlColor);
    --controlBackgroundColorDeactivated: var(--colorNeutralLighter);
    --controlBorderColorDeactivated: var(--controlBackgroundColorDeactivated);

    /*=====
        #Colors #Inform
    =====*/
    --controlColorAlert: var(--colorWarmest, rgb(168, 62, 0));
    --controlColorAttention: var(--colorWarmer, rgb(168, 118, 0));
}

form {
    font-family: var(--formBaseFontFamily);
}

fieldset {
	padding: var(--controlGroupPadding);
	background-color: var(--controlGroupBackgroundColor);
	border: var(--controlGroupBorderWidth) var(--controlGroupBorderStyle) var(--controlGroupBorderColor);
	border-radius: var(--controlCornerSize);
	margin: .618em .618rem;
}

fieldset:disabled {
	--controlGroupBorderColor: var(--colorNeutralLighter);
	--controlGroupBackgroundColor: rgba(220,220,220, .3);
}

legend {
	display: block;
	color: var(--controlGroupColor);
	font-family: var(--formTitleFontFamily);
	font-weight: bold;
	font-size: var(--formLabelSize);
	line-height: 1.2;
	padding: .35em .5rem;
	margin: .618em 0;
	border: var(--controlGroupBorderWidth) var(--controlGroupBorderStyle) var(--controlGroupBorderColor);
	border-radius: var(--controlGroupCornerSize);
	background-color: var(--controlGroupBackgroundColor);
}

label {
    color: var(--controlGroupColor);
    font-size: var(--formBaseTextSize);
}

input,
button,
select,
textarea {
	color: var(--controlColor);
	font-size: var(--formControlSize);
	padding-top: var(--controlVertPadding);
	padding-bottom: var(--controlVertPadding);
	border-width: var(--controlBorderWidth);
	border-style: var(--controlBorderStyle);
	border-color: var(--controlBorderColor);
	border-radius: var(--controlCornerSize);
	background-color: var(--controlBackgroundColor);
	transition: all 0.3s ease-in-out;
	outline: none;
}

input,
button,
textarea,
option,
label {
	padding-left: var(--controlHorzPadding);
	padding-right: calc(var(--controlHorzPadding) / 2);
}

optgroup {
	font-style: normal;
}

input:hover,
input:focus,
button:hover,
button:focus,
select:hover,
select:focus,
textarea:hover,
textarea:focus {
	color: var(--controlColorInterest);
	background-color: var(--controlBackgroundColorInterest);
	border-color: var(--controlBorderColorInterest);
}

input:active,
button:active,
select:active,
textarea:active {
	color: var(--controlColorActive);
	background-color: var(--controlBackgroundColorActive);
	border-color: var(--controlBorderColorActive);
}

button:focus-visible,
[type="button"]:focus-visible,
[type="submit"]:focus-visible,
[type="reset"]:focus-visible {
	outline: none;
}

input:focus:invalid,
select:focus:invalid,
textarea:focus:invalid {
	border-color: var(--controlColorAlert);
}
/* ... */

